Add GitHub Actions CD workflow and update configurations

--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@ default: &default
   adapter: postgresql
   encoding: unicode
   host: db
-  username: postgres
+  username: myapp
   password: password
   pool: 5
 
