--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,32 @@
-version: '3'
 services:
+  app:
+    build: .
+    container_name: app-container
+    depends_on:
+      - db
+    ports:
+      - "3000:3000"
+    environment:
+      - DATABASE_HOST=db
+      - DATABASE_USERNAME=postgres
+      - DATABASE_PASSWORD=postgres
+      - DATABASE_NAME=webservice_development
+    volumes:
+      - .:/myapp
+    networks:
+      - webservice-network
+
   db:
-    image: postgres:16 # PostgreSQL 16 のイメージ
+    image: postgres:16
     container_name: postgres-container
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres # パスワードの設定（後で変更できます）
-      POSTGRES_DB: webservice_development # データベース名
+      POSTGRES_USER: myapp
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: webservice_development
     ports:
-      - "5432:5432"  # PostgreSQL のポートをマッピング
+      - "5432:5432"
     volumes:
-      - postgres-data:/var/lib/postgresql/data # データ永続化のためのボリューム
+      - postgres-data:/var/lib/postgresql/data
     networks:
       - webservice-network
 
