--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,23 +29,29 @@ jobs:
         run: bundle exec brakeman --no-pager
 
   scan_js:
-    runs-on: ubuntu-latest
+  runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: .ruby-version
-          bundler-cache: true
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: .ruby-version
+        bundler-cache: true
 
-      - name: Ensure bin scripts are executable
-        run: chmod +x bin/*
+    - name: Install dependencies
+      run: bundle install --jobs 4 --retry 3
 
-      - name: Scan for security vulnerabilities in JavaScript dependencies
-        run: bundle exec importmap audit
+    - name: Ensure bin scripts are executable
+      run: chmod +x bin/*
+
+    - name: Debug bin permissions
+      run: ls -l bin/
+
+    - name: Scan for security vulnerabilities in JavaScript dependencies
+      run: bundle exec importmap audit
 
   lint:
     runs-on: ubuntu-latest
