--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -43,15 +43,17 @@ jobs:
 
       - name: Update ECS task definition
         run: |
-          TASK_DEF=$(aws ecs describe-task-definition --task-definition ECS-task --query taskDefinition)
-          echo $TASK_DEF | jq '.containerDefinitions[0].image="060795905234.dkr.ecr.ap-northeast-1.amazonaws.com/project-a:'$IMAGE_TAG'"' > $ECS_TASK_DEFINITION
+          aws ecs describe-task-definition --task-definition ECS-task --query taskDefinition > original-task-definition.json
+          cat original-task-definition.json | jq 'del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities)' | jq '.containerDefinitions[0].image="060795905234.dkr.ecr.ap-northeast-1.amazonaws.com/project-a:'$IMAGE_TAG'"' > $ECS_TASK_DEFINITION
           echo "Updated task definition saved to $ECS_TASK_DEFINITION"
 
       - name: Register new ECS task definition
         run: |
-          TASK_DEF_ARN=$(aws ecs register-task-definition --cli-input-json file://$ECS_TASK_DEFINITION --query taskDefinition.taskDefinitionArn --output text)
+          cat $ECS_TASK_DEFINITION | jq '.' > formatted-task-definition.json
+          TASK_DEF_ARN=$(aws ecs register-task-definition --cli-input-json file://formatted-task-definition.json --query "taskDefinition.taskDefinitionArn" --output text)
           echo "TASK_DEF_ARN=$TASK_DEF_ARN" >> $GITHUB_ENV
 
       - name: Update ECS service
         run: |
+          echo "TASK_DEF_ARN is: $TASK_DEF_ARN"
           aws ecs update-service --cluster $ECS_CLUSTER --service $ECS_SERVICE --task-definition $TASK_DEF_ARN
